# oxytone

./: .basex.example  .basexgui  .gitattributes  .gitignore  .prettierrc  .rsyncignore  .shellcheckrc  CLAUDE.md  Caddyfile  Justfile  Makefile  Pipfile  README.md  TODO.md  TODO.org  TODOS.md  catalog.xq  clauses.xq  eslint.config.js  flashcards.py  flatbanks.xq  glaux-english.tsv  glaux.tsv  glaux.xq  hugo.toml  lit.xq  lsj.xq  merge-glaux.awk  meta.json  nt.xq  package-lock.json  package.json  paroxytone.xpr  pnpm-lock.yaml  prose-merge.xq  pyproject.toml  requirements.txt  scratch.py  scratch.xq  shortdefs.xq  (+10 more)
.github/: FUNDING.yml
Caddyfile.d/: dev.caddyfile  prod.caddyfile  snippets.caddyfile
app/: jinja.py  main.py
cli/: main.py
core/: augment_xml.py  constants.py  corpus.py  ref.py  render.py  utils.py  word.py
data/: index.json
glaux/: 0001-001.xml  0002-001.xml  0003-001.xml  0003-002.xml  0004-001.xml  0004-002.xml  0005-001.xml  0005-002.xml  0005-005.xml  0006-001.xml  0006-002.xml  0006-003.xml  0006-004.xml  0006-005.xml  0006-006.xml  0006-007.xml  0006-008.xml  0006-009.xml  0006-010.xml  0006-011.xml  0006-012.xml  0006-013.xml  0006-014.xml  0006-015.xml  0006-016.xml  0006-017.xml  0006-018.xml  0006-019.xml  0006-031.xml  0007-001.xml  0007-002.xml  0007-003.xml  0007-004.xml  0007-005.xml  0007-006.xml  0007-007.xml  0007-008.xml  0007-009.xml  0007-010.xml  0007-011.xml  (+1381 more)
lit/: tlg0001.tlg001.perseus-grc2.xml  tlg0003.tlg001.perseus-grc2.xml  tlg0004.tlg001.perseus-grc2.xml  tlg0005.tlg001.perseus-grc2.xml  tlg0005.tlg002.perseus-grc2.xml  tlg0006.tlg001.perseus-grc2.xml  tlg0006.tlg002.perseus-grc2.xml  tlg0006.tlg003.perseus-grc2.xml  tlg0006.tlg004.perseus-grc2.xml  tlg0006.tlg005.perseus-grc2.xml  tlg0006.tlg006.perseus-grc2.xml  tlg0006.tlg007.perseus-grc2.xml  tlg0006.tlg008.perseus-grc2.xml  tlg0006.tlg009.perseus-grc2.xml  tlg0006.tlg010.perseus-grc2.xml  tlg0006.tlg011.perseus-grc2.xml  tlg0006.tlg012.perseus-grc2.xml  tlg0006.tlg013.perseus-grc2.xml  tlg0006.tlg014.perseus-grc2.xml  tlg0006.tlg015.perseus-grc2.xml  tlg0006.tlg016.perseus-grc2.xml  tlg0006.tlg017.perseus-grc2.xml  tlg0006.tlg018.perseus-grc2.xml  tlg0006.tlg019.perseus-grc2.xml  tlg0007.tlg001.perseus-grc2.xml  tlg0007.tlg002.perseus-grc2.xml  tlg0007.tlg003.perseus-grc2.xml  tlg0007.tlg004.perseus-grc2.xml  tlg0007.tlg005.perseus-grc2.xml  tlg0007.tlg006.perseus-grc2.xml  tlg0007.tlg007.perseus-grc2.xml  (+783 more)
repo/: db-lazy.xqm  lsj.xqm  (+12 more)
(+302 files in other folders)
