[tool.poetry]
name = "pyrrho"
version = "0.1.0"
description = ""
authors = ["Vincent Carrier <vincentcarrier15@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
boltons = "^23.0.0"

# app
flask = "^2.3.2"
watchdog = "^3.0.0"
tornado = "~6.2"

# cli
typer = "^0.9.0"

# lib
dominate = "^2.7.0"
pyconll = "^3.1.0"
ordered-enum = "^0.0.8"
pycts = "^0.2.2"
rich = "^13.3.5"
python-slugify = "^8.0.1"
python-box = "^7.0.1"

lxml = "^4.9.4"
more-itertools = "^10.1.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
pytest = "^7.3.1"
types-python-slugify = "^8.0.0.2"
lxml-stubs = "^0.4.0"
ipykernel = "^6.27.1"
djlint = "^1.34.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true
warn_no_return = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
addopts = ["--strict-markers", "-m", "not slow"]
markers = ["slow"]

[tool.djlint]
profile="jinja"