[tool.poetry]
name = "pyrrho"
version = "0.1.0"
description = ""
authors = ["Vincent Carrier <vincentcarrier15@gmail.com>"]

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true
warn_no_return = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
addopts = ["--strict-markers", "-m", "not slow"]
markers = ["slow"]

[tool.djlint]
profile="jinja"